Extratos tabela transações

--- a/src/assets/scss/argon-dashboard/custom/_content.scss
+++ b/src/assets/scss/argon-dashboard/custom/_content.scss
@@ -1,6 +1,5 @@
 .main-content {
     position: relative;
-
     // Navbar
     .navbar-top {
         position: absolute;
@@ -12,7 +11,6 @@
         padding-left: 0 !important;
         padding-right: 0 !important;
     }
-
     // Container
     .container-fluid {
         @include media-breakpoint-up(md) {
@@ -22,26 +20,29 @@
     }
 }
 
-
 // Offsets the main content depending on the sidebar positioning
-
 .navbar-vertical.navbar-expand {
-
     @each $breakpoint,
     $dimension in $grid-breakpoints {
-
         &-#{$breakpoint} {
-
             @include media-breakpoint-up(#{$breakpoint}) {
-
                 // Left
-                &.fixed-left + .main-content {
+                &.fixed-left+.main-content {
                     margin-left: $navbar-vertical-width;
                 } // Right
-                &.fixed-right + .main-content {
+                &.fixed-right+.main-content {
                     margin-right: $navbar-vertical-width;
                 }
             }
         }
     }
+}
+
+.transaction {
+    font-size: 0.875rem;
+    text-align: left;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-weight: 400;
+    line-height: 1.43;
+    letter-spacing: 0.01071em;
 }
