--- a/src/assets/scss/argon-dashboard-react.scss
+++ b/src/assets/scss/argon-dashboard-react.scss
@@ -52,3 +52,4 @@
 // React Differences
 @import "react/react-differences";
 @import "argon-dashboard/custom/labels";
+@import "argon-dashboard/custom/custom";
